--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,7 @@ AuthUserFile ./.htpasswd
 AuthType Basic
 AuthName "Restricted Access"
 Require valid-user
+
+RewriteEngine On
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^ index.php [QSA,L]
